# nushell

./: .14238_notes.md.swp  .affected.toml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.orig  Cargo.toml  Cargo.toml.old  Cross.toml  Dockerfile  LICENSE  Makefile  Makefile.toml  PLATFORM_SUPPORT.md  README-duration-spec.md  README.build.txt  README.md  README.release.txt  SECURITY.md  THIRDPARTY.md  TODO.md  a.txt  agents.md  appveyor.yml  asda.txt  build-all-maclin.sh  build-all-windows.cmd  build-all.nu  build.rs  clippy.toml  (+45 more)
crates/nu-ansi-term/: Cargo.toml  LICENCE  README.md
crates/nu-ansi-term/examples/: 256_colors.rs  rgb_colors.rs
crates/nu-ansi-term/src/: ansi.rs  debug.rs  difference.rs  display.rs  gradient.rs  lib.rs  style.rs  util.rs  windows.rs
crates/nu-build/: Cargo.toml
crates/nu-build/src/: lib.rs
crates/nu-cli/: Cargo.toml  README.md  build.rs
crates/nu-cli/src/: app.rs  cli.rs  command_registry.rs  commands.rs  completion.rs  completions.rs  config_files.rs  context.rs  cwd_hinter.rs  data.rs  default_context.rs  deserializer.rs  documentation.rs  env.rs  errors.rs  eval_cmds.rs  eval_file.rs  evaluation_context.rs  examples.rs  format.rs  git.rs  help_completions.rs  help_menu.rs  keybinding.rs  lib.rs  line_editor.rs  nu_highlight.rs  path.rs  plugin.rs  prelude.rs  print.rs  prompt.rs  prompt_update.rs  reedline_config.rs  repl.rs  script.rs  shell.rs  startup_context.rs  stream.rs  syntax_highlight.rs  (+4 more)
crates/nu-cli/tests/: alias.rs  completions.rs  custom_completions.rs  dotnu_completions.rs  external_completions.rs  file_completions.rs  flag_completions.rs  folder_completions.rs  main.rs  test_completions.rs  variables_completions.rs
crates/nu-cmd-base/: Cargo.toml  README.md
crates/nu-cmd-base/src/: arg_glob.rs  hook.rs  input_handler.rs  lib.rs  util.rs  wrap_call.rs
crates/nu-cmd-clip/: Cargo.toml  README.md
crates/nu-cmd-clip/src/: default_context.rs  lib.rs
crates/nu-cmd-dataframe/: Cargo.toml
crates/nu-cmd-dataframe/src/: lib.rs
crates/nu-cmd-extra/: Cargo.toml  README.md  build.rs
crates/nu-cmd-extra/src/: example_test.rs  lib.rs
crates/nu-cmd-extra/tests/: main.rs
crates/nu-cmd-lang/: Cargo.toml  README.md  build.rs
crates/nu-cmd-lang/src/: default_context.rs  example_support.rs  example_test.rs  lib.rs  parse_const_test.rs
crates/nu-cmd-lang/tests/: main.rs
crates/nu-cmd-plugin/: Cargo.toml  README.md
crates/nu-cmd-plugin/src/: default_context.rs  lib.rs  util.rs
crates/nu-color-config/: Cargo.toml  README.md
crates/nu-color-config/src/: color_config.rs  lib.rs  matching_brackets_style.rs  nu_style.rs  shape_color.rs  style_computer.rs  text_style.rs
crates/nu-color-config/tests/: main.rs
crates/nu-command/: Cargo.toml  README.md  build.rs
crates/nu-command/assets/: 228_themes.json
crates/nu-command/src/: alias.rs  all_commands.rs  benchmark.rs  build_string.rs  commands.rs  def.rs  default_context.rs  do_.rs  each.rs  example_test.rs  examples.rs  for_.rs  futures.rs  hook.rs  if_.rs  input_handler.rs  length.rs  let_.rs  let_env.rs  lib.rs  lines.rs  maybe_print_errors.rs  module.rs  prelude.rs  progress_bar.rs  run_external.rs  script.rs  sort_utils.rs  source.rs  table.rs  use_.rs  util.rs  utils.rs
crates/nu-command/tests/: main.rs  sort_utils.rs  view_source.rs
crates/nu-completion/: Cargo.toml
crates/nu-completion/src/: command.rs  completer.rs  custom.rs  engine.rs  flag.rs  lib.rs  path.rs  variable.rs
crates/nu-completions/: Cargo.toml
crates/nu-completions/src/: command.rs  completer.rs  engine.rs  flag.rs  lib.rs  path.rs
crates/nu-config/: Cargo.toml
crates/nu-config/default_files/: default_config.nu  doc_config.nu  doc_env.nu  scaffold_env.nu
crates/nu-config/src/: config_file.rs  env_access.rs  errors.rs  lib.rs  overrides.rs  paths.rs  resolve.rs
crates/nu-data/: Cargo.toml
crates/nu-data/src/: base.rs  command.rs  config.rs  dataframe.rs  dict.rs  keybinding.rs  lib.rs  primitive.rs  process.rs  types.rs  value.rs
crates/nu-dataframe/: Cargo.toml
crates/nu-dataframe/src/: between_values.rs  conversion.rs  custom_value.rs  lib.rs  operations.rs
crates/nu-derive-value/: Cargo.toml
crates/nu-derive-value/src/: attributes.rs  case.rs  error.rs  from.rs  into.rs  lib.rs  names.rs  tests.rs
crates/nu-ebpf/: Cargo.toml
crates/nu-ebpf/src/: lib.rs  loader.rs
crates/nu-engine/: Cargo.toml  README.md
crates/nu-engine/src/: basic_evaluation_context.rs  basic_shell_manager.rs  call_ext.rs  call_info.rs  closure_eval.rs  column.rs  command_args.rs  command_prelude.rs  command_thread.rs  config_holder.rs  debug_util.rs  deserializer.rs  documentation.rs  env.rs  eval.rs  eval_helpers.rs  eval_ir.rs  evaluation_context.rs  example.rs  exit.rs  external.rs  from_value.rs  glob_from.rs  history_path.rs  lib.rs  maybe_text_codec.rs  nu_variable.rs  pipeline_proxy.rs  print.rs  runnable_context.rs  scope.rs  script.rs  state.rs  types.rs  value.rs  whole_stream_command.rs
crates/nu-engine/tests/: main.rs  script.rs
crates/nu-errors/: Cargo.toml
crates/nu-errors/src/: lib.rs
crates/nu-experimental/: Cargo.toml
crates/nu-experimental/src/: imp.rs  lib.rs  parse.rs  util.rs
crates/nu-explore/: Cargo.toml  README.md
crates/nu-explore/src/: command.rs  default_context.rs  explore.rs  explore_config.rs  explore_regex.rs  lib.rs  pager.rs
crates/nu-glob/: Cargo.toml  LICENSE-MIT  README.md
crates/nu-glob/src/: lib.rs
crates/nu-heavy-utils/: Cargo.toml
crates/nu-heavy-utils/src/: endian.rs  lib.rs  main.rs  merge.rs
crates/nu-json/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/nu-json/src/: builder.rs  de.rs  error.rs  forward.rs  lib.rs  nu_value.rs  ser.rs  util.rs  value.rs
crates/nu-json/tests/: main.rs
crates/nu-lsp/: Cargo.toml  LICENSE  README.md
crates/nu-macros/: Cargo.toml
crates/nu-mcp/: Cargo.toml  README.md
crates/nu-parser/: Cargo.toml  README.md
(+7409 files in other folders)
