[package]
authors = ["The Nushell Project Developers"]
build = "scripts/build.rs"
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition.workspace = true
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
repository = "https://github.com/nushell/nushell"
rust-version.workspace = true
version = "0.112.3"
autotests = false

[workspace.package]
edition = "2024"
rust-version = "1.93.1"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2019-2026 The Nushell Project Developers"
FileDescription = "A new type of shell"
FileVersion = "0.112.3"
ProductVersion = "0.112.3"
ProductName = "Nushell"

[workspace]
members = [
  "crates/nu_plugin_custom_values",
  "crates/nu_plugin_example",
  "crates/nu_plugin_formats",
  "crates/nu_plugin_gstat",
  "crates/nu_plugin_inc",
  "crates/nu_plugin_polars",
  "crates/nu_plugin_query",
  "crates/nu_plugin_stress_internals",
  "crates/nu-cli",
  "crates/nu-cmd-base",
  "crates/nu-cmd-extra",
  "crates/nu-cmd-lang",
  "crates/nu-cmd-plugin",
  "crates/nu-color-config",
  "crates/nu-command",
  "crates/nu-derive-value",
  "crates/nu-engine",
  "crates/nu-experimental",
  "crates/nu-explore",
  "crates/nu-json",
  "crates/nu-lsp",
  "crates/nu-parser",
  "crates/nu-plugin-core",
  "crates/nu-plugin-engine",
  "crates/nu-plugin-protocol",
  "crates/nu-plugin-test-support",
  "crates/nu-plugin",
  "crates/nu-pretty-hex",
  "crates/nu-protocol",
  "crates/nu-std",
  "crates/nu-system",
  "crates/nu-table",
  "crates/nu-term-grid",
  "crates/nu-test-support",
  "crates/nu-test-support-macros",
  "crates/nu-utils",
  "crates/nuon",
  "crates/nu-mcp",
]

[workspace.dependencies]
alphanumeric-sort = "1.5"
ansi-str = "0.9"
anyhow = "1.0.102"
base64 = "0.22.1"
bracoxide = "0.1.8"
brotli = "8.0"
byteorder = "1.5"
bytes = "1"
bytesize = "2.3.1"
byteyarn = "0.5"
calamine = "0.34"
chardetng = "0.1.17"
chrono = { default-features = false, version = "0.4.41" } # polars is requiring <= 0.4.41
chrono-humanize = "0.2.3"
chrono-tz = "0.10"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
csv = "1.4"
ctrlc = "3.5"
derive_more = "2.1.1"
devicons = "0.6.12"
digest = { default-features = false, version = "0.10" }
dirs = "6.0"
dirs-sys = "0.5"
dns-lookup = "3.0.1"
dtparse = "2.0"
encoding_rs = "0.8"
fancy-regex = "0.17"
filesize = "0.2"
filetime = "0.2.27"
fuzzy-matcher = { version = "^0.3.7" }
gatekeeper = "3.0.0"
heck = "0.5.0"
http = "1.4.0"
human-date-parser = "0.3.1"
indexmap = "2.14.0"
indicatif = "0.18.4"
interprocess = "2.4.2"
is_executable = "1.0.5"
itertools = "0.14"
kitest = "0.5.0"
lean_string = { version = "0.6.0", features = ["serde"] }
lexopt = "0.3.2"
libc = "0.2.185"
libproc = "0.14.11"
log = "0.4"
lru = "0.17.0"
lscolors = { version = "0.21", default-features = false }
lsp-server = "0.7.9"
lsp-types = { version = "0.97.0", features = ["proposed"] }
lsp-textdocument = "0.5.0"
linkme = "0.3.36"
mach2 = "0.6"
md5 = { version = "0.10", package = "md-5" }
miette = "7.6"
mime = "0.3.17"
mime_guess = "2.0"
mq-markdown = "0.5.26"
mockito = { version = "1.7.2", default-features = false }
multipart-rs = "0.1.13"
native-tls = "0.2.18"
nix = { version = "0.31.2", default-features = false }
notify-debouncer-full = { version = "0.3", default-features = false }
nu-ansi-term = "0.50.3"
nucleo-matcher = "0.3"
num-format = "0.4"
num-traits = "0.2"
oem_cp = "2.1.2"
omnipath = "0.1"
open = "5.3.4"
os_pipe = { version = "1.2.3", features = ["io_safety"] }
parking_lot = "0.12.5"
pathdiff = "0.2"
percent-encoding = "2"
pretty_assertions = "1.4"
print-positions = "0.6"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
procfs = "0.18.0"
pwd = "1.4"
quick-xml = "0.39.2"
quickcheck = "1.1"
quickcheck_macros = "1.2"
quote = "1.0.45"
rand = "0.10"
getrandom = "0.4.2" # pick same version that rand requires
rand_chacha = "0.10"
ratatui = { version = "0.30", default-features = false, features = [
  "all-widgets",
  "crossterm",
  "layout-cache",
  "macros",
  #"underline-color" # leave out so we don't bring in termwiz
] }
rayon = "1.12.0"
reedline = "0.47.0"
rmp = "0.8.15"
rmp-serde = "1.3.1"
roxmltree = "0.20.0"
rstest = { version = "0.26.1", default-features = false }
rstest_reuse = "0.7"
rusqlite = "0.37"
# We have to semi-fix rustls and ureq versions
# because we use unversioned api to allow users set up their own
# crypto providers (grep for "unversioned").
# Patch updates are allowed though.
rustls = { version = "~0.23.38", default-features = false, features = ["std", "tls12"] }
rustls-native-certs = "0.8"
scopeguard = { version = "1.2.0" }
serde = { version = "1.0" }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sha2 = "0.10"
strip-ansi-escapes = "0.2.1"
strum = "0.27.0"
strum_macros = "0.27.0"
syn = "2.0.117"
sysinfo = "0.38.4"
tabled = { version = "0.20", default-features = false }
tempfile = "3.27"
thiserror = "2.0.18"
titlecase = "3.6"
tokio = { version = "1.52.1" }
toml = "1.1.2"
toml_edit = "0.25.11"
trash = "=5.2.5"
update-informer = { version = "1.3.0", default-features = false, features = ["github", "ureq"] }
umask = "2.1"
unicode-segmentation = "1.13"
unicode-width = "0.2"
ureq = { version = "~3.3.0", default-features = false, features = ["socks-proxy"] }
url = "2.5"
uu_cp = "0.8.0"
uu_mkdir = "0.8.0"
uu_mktemp = "0.8.0"
uu_mv = "0.8.0"
uu_touch = "0.8.0"
uu_whoami = "0.8.0"
uu_uname = "0.8.0"
uucore = "0.8.0"
uuid = "1.23.1"
v_htmlescape = "0.15.8"
wax = "0.7.0"
web-time = "1.1.0"
which = "8.0.2"
win_uds = "=0.2.2"
windows = "0.62.2"
windows-sys = "0.61.2"
winreg = "0.56"
memchr = "2.8.0"
webpki-roots = "1.0.7"

[workspace.lints.clippy]
# Warning: workspace lints affect library code as well as tests, so don't enable lints that would be too noisy in tests like that.
# todo = "warn"
format_push_string = "warn"
needless_raw_strings = "warn"
result_large_err = "allow"
unchecked_time_subtraction = "warn"
unwrap_used = "deny"
used_underscore_binding = "warn"

[lints]
workspace = true

[dependencies]
nu-cli = { path = "./crates/nu-cli", version = "0.112.3" }
nu-cmd-base = { path = "./crates/nu-cmd-base", version = "0.112.3" }
nu-cmd-extra = { path = "./crates/nu-cmd-extra", version = "0.112.3" }
nu-cmd-lang = { path = "./crates/nu-cmd-lang", version = "0.112.3" }
nu-cmd-plugin = { path = "./crates/nu-cmd-plugin", version = "0.112.3", optional = true }
nu-command = { path = "./crates/nu-command", version = "0.112.3", default-features = false, features = ["os"] }
nu-engine = { path = "./crates/nu-engine", version = "0.112.3" }
nu-experimental = { path = "./crates/nu-experimental", version = "0.112.3" }
nu-explore = { path = "./crates/nu-explore", version = "0.112.3" }
nu-lsp = { path = "./crates/nu-lsp/", version = "0.112.3" }
nu-parser = { path = "./crates/nu-parser", version = "0.112.3" }
nu-path = { path = "./crates/nu-path", version = "0.112.3" }
nu-plugin-engine = { path = "./crates/nu-plugin-engine", optional = true, version = "0.112.3" }
nu-protocol = { path = "./crates/nu-protocol", version = "0.112.3" }
nu-std = { path = "./crates/nu-std", version = "0.112.3" }
nu-system = { path = "./crates/nu-system", version = "0.112.3" }
nu-utils = { path = "./crates/nu-utils", version = "0.112.3" }
nu-mcp = { path = "./crates/nu-mcp", version = "0.112.3", optional = true }
reedline = { workspace = true, features = ["bashisms"] }

crossterm = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
lexopt = { workspace = true }
miette = { workspace = true, features = ["fancy-no-backtrace", "fancy"] }
multipart-rs = { workspace = true }
serde_json = { workspace = true }
simplelog = "0.12"
time = "0.3.47"
same-file = "1.0.6"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Our dependencies don't use OpenSSL on Windows
openssl = { version = "0.10.78", features = ["vendored"], optional = true }

[build-dependencies]
winresource = "0.1.31"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, default-features = false, features = [
  "signal",
  "process",
  "fs",
  "term",
] }

[dev-dependencies]
nu-test-support = { path = "./crates/nu-test-support", version = "0.112.3", features = ["os"] }
nu-plugin-protocol = { path = "./crates/nu-plugin-protocol", version = "0.112.3" }
nu-plugin-core = { path = "./crates/nu-plugin-core", version = "0.112.3" }
assert_cmd = "2.2.1"
dirs = { workspace = true }
tango-bench = "0.7.2"
pretty_assertions = { workspace = true }
fancy-regex = { workspace = true }
rstest = { workspace = true, default-features = false }
tempfile = { workspace = true }

[features]
# Enable all features while still avoiding mutually exclusive features.
# Use this if `--all-features` fails.
full = [
  "network",
  "plugin",
  "rustls-tls",
  "sqlite",
  "system-clipboard",
  "trash-support",
  "mcp",
]

plugin = [
  # crates
  "dep:nu-cmd-plugin",
  "dep:nu-plugin-engine",

  # features
  "nu-cli/plugin",
  "nu-cmd-lang/plugin",
  "nu-command/plugin",
  "nu-engine/plugin",
  "nu-parser/plugin",
  "nu-protocol/plugin",
]

mcp = [
  "dep:nu-mcp",
  "nu-mcp/mcp",
]

network = ["nu-command/network"]
native-tls = ["nu-command/native-tls"]
rustls-tls = ["nu-command/rustls-tls"]

default = [
  "plugin",
  "trash-support",
  "sqlite",
  "network",
  "rustls-tls",
  "mcp",
]
stable = ["default"]
# NOTE: individual features are also passed to `nu-cmd-lang` that uses them to generate the feature matrix in the `version` command

# Enable to statically link OpenSSL (perl is required, to build OpenSSL https://docs.rs/openssl/latest/openssl/);
# otherwise the system version will be used. Not enabled by default because it takes a while to build
static-link-openssl = ["dep:openssl"]

# Optional system clipboard support in `reedline`, this behavior has problematic compatibility with some systems.
# Missing X server/ Wayland can cause issues
system-clipboard = [
  "reedline/system_clipboard",
  "nu-cli/system-clipboard",
]

# Stable (Default)
trash-support = ["nu-command/trash-support"]

# SQLite commands for nushell
sqlite = [
  "nu-cli/sqlite",
  "nu-command/sqlite",
  "nu-std/sqlite",
  "nu-protocol/sqlite",
  "reedline/sqlite",
]

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true

# build with `cargo build --profile ci`
# to analyze performance with tooling like linux perf
[profile.ci]
inherits = "dev"
strip = false
debug = false

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
bench = false

# To use a development version of a dependency please use a global override here
# changing versions in each sub-crate of the workspace is tedious
[patch.crates-io]
reedline = { git = "https://github.com/nushell/reedline", branch = "main" }
# nu-ansi-term = { git = "https://github.com/nushell/nu-ansi-term.git", branch = "main" }

# Run all benchmarks with `cargo bench`
# Run individual benchmarks like `cargo bench -- <regex>` e.g. `cargo bench -- parse`
[[bench]]
name = "benchmarks"
harness = false
