[package]
authors = [
    "ogham@bsago.me",
    "Ryan Scheel (Havvy) <ryan.havvy@gmail.com>",
    "Josh Triplett <josh@joshtriplett.org>",
    "The Nu Project Contributors",
]
description = "Library for ANSI terminal colors and styles (bold, underline)"
edition = "2018"
license = "MIT"
name = "nu-ansi-term"
version = "0.27.1"

[lib]
doctest = false
# name = "nu-ansi-term"

[features]
derive_serde_style = ["serde"]

[dependencies.serde]
version = "1.0.90"
features = ["derive"]
optional = true

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.4"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]

[dev-dependencies]
doc-comment = "0.3"
regex = "1.1.9"

[dev-dependencies.serde_json]
version = "1.0.39"
