[package]
name = "nu-build"
version = "0.15.1"
authors = ["The Nu Project Contributors"]
edition = "2018"
description = "Core build system for nushell"
license = "MIT"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0.55"
toml = "0.5.6"
